[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phoneinfopy"
version = "1.0.0"
description = "phoneinfopy is a Python package that allow you to get respones from truecaller APIs. You can able to do login, OTP verification, and phone number search using Truecaller API with this package."
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "truecaller",
    "phoneinfopy",
    "search",
    "phone",
    "number",
    "phonenumber",
    "information",
    "mobile",
    "numberinfofinder",
]
authors = [{ name = "Yuvaraj [Mr_3rr0r_501]", email = "yuvarajucet@gmail.com" }]
maintainers = [{ name = "Yuvaraj [Mr_3rr0r_501]", email = "yuvarajucet@gmail.com" }]

classifiers = [
    "Topic :: Utilities",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 license ",
]

dependencies = ["requests", "random", "pprint", "argparse"]

[project.urls]
Homepage = "https://github.com/yuvarajucet/phoneinfopy"
Documentation = "https://github.com/yuvarajucet/phoneinfopy"
Repository = "https://github.com/yuvarajucet/phoneinfopy"
Changelog = "https://github.com/yuvarajucet/phoneinfopy"
